--- a/app/package.json
+++ b/app/package.json
@@ -22,9 +22,9 @@
     "expo-splash-screen": "~31.0.13",
     "expo-status-bar": "~3.0.9",
     "expo-web-browser": "~15.0.10",
-    "framer-motion": "^12.29.2",
+    "framer-motion": "^11.11.17",
     "lucide-react-native": "^0.563.0",
-    "moti": "^0.30.0",
+    "moti": "^0.29.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
@@ -32,12 +32,15 @@
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-svg": "^15.12.1",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
+    "tslib": "^2.8.1",
     "zustand": "^5.0.10"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
+    "babel-plugin-module-resolver": "^5.0.2",
     "react-test-renderer": "19.1.0",
     "typescript": "~5.9.2"
   },
