--- a/app/package.json
+++ b/app/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "web:clear": "expo start --web --clear"
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
@@ -39,8 +40,10 @@
     "zustand": "^5.0.10"
   },
   "devDependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.28.6",
     "@types/react": "~19.1.0",
     "babel-plugin-module-resolver": "^5.0.2",
+    "cross-env": "^10.1.0",
     "react-test-renderer": "19.1.0",
     "typescript": "~5.9.2"
   },
